--- a/TradeMaster6000/Client/Shared/NavMenu.razor
+++ b/TradeMaster6000/Client/Shared/NavMenu.razor
@@ -29,11 +29,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Ticker logs
             </NavLink>
         </li>
-        @*<li class="nav-item px-3">
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="magic">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Magic
             </NavLink>
-        </li>*@
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="hangfire">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Hangfire
+            </NavLink>
+        </li>
         <li class="nav-item fixed-bottom">
             <AuthorizeView>
                 <Authorized>
