--- a/TradeMaster6000/Client/Pages/Magic.razor
+++ b/TradeMaster6000/Client/Pages/Magic.razor
@@ -12,6 +12,22 @@
     if (IsConnected)
     {
         <RadzenButton ButtonStyle="ButtonStyle.Primary" Click="@StartMagic" Text="Start magic" />
+
+        <hr />
+
+        <RadzenDataGrid @ref="candlesGrid" AllowFiltering="true" AllowPaging="true" PageSize="10" AllowSorting="true"
+                        Data="@candles" TItem="Candle">
+            <Columns>
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="InstrumentToken" Title="Instrument Token" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Open" Title="Open" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="High" Title="High" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Low" Title="Low" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Close" Title="Close" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="From" Title="From" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="To" Title="To" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Kill" Title="Kill" />
+            </Columns>
+        </RadzenDataGrid>
     }
     else
     {
@@ -21,14 +37,29 @@
 
 @code {
     private HubConnection hubConnection;
-
+    RadzenDataGrid<Candle> candlesGrid;
+    private IEnumerable<Candle> candles = new List<Candle>();
     protected override async Task OnInitializedAsync()
     {
         hubConnection = new HubConnectionBuilder()
         .WithUrl(NavigationManager.ToAbsoluteUri("/orderhub"))
         .Build();
 
+        hubConnection.On<List<Candle>>("ReceiveCandles", (list) =>
+        {
+            candles = list;
+            candles.Reverse();
+            StateHasChanged();
+        });
+
         await hubConnection.StartAsync();
+
+        await GetCandles();
+    }
+
+    public async Task GetCandles()
+    {
+        await hubConnection.SendAsync("GetCandles");
     }
 
     private async Task StartMagic()
