--- a/TradeMaster6000/Client/Pages/Magic.razor
+++ b/TradeMaster6000/Client/Pages/Magic.razor
@@ -18,7 +18,7 @@
         <RadzenDataGrid @ref="candlesGrid" AllowFiltering="true" AllowPaging="true" PageSize="10" AllowSorting="true"
                         Data="@candles" TItem="Candle">
             <Columns>
-                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="InstrumentToken" Title="Instrument Token" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="InstrumentSymbol" Title="Instrument Symbol" />
                 <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Open" Title="Open" />
                 <RadzenDataGridColumn Width="100px" TItem="Candle" Property="High" Title="High" />
                 <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Low" Title="Low" />
