--- a/TradeMaster6000/Client/Shared/NavMenu.razor
+++ b/TradeMaster6000/Client/Shared/NavMenu.razor
@@ -30,8 +30,13 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="magic">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Magic
+            <NavLink class="nav-link" href="candlemagic">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Candle Magic
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="zoneservice">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Zone Service
             </NavLink>
         </li>
         <AuthorizeView>
@@ -42,13 +47,10 @@
                     </NavLink>
                 </li>
                 <li class="nav-item fixed-bottom">
-
                     <ApiLoginDisplay />
-
                 </li>
             </Authorized>
         </AuthorizeView>
-
     </ul>
 </div>
 
