--- a/TradeMaster6000/Client/Pages/CandleMagic.razor
+++ b/TradeMaster6000/Client/Pages/CandleMagic.razor
@@ -12,6 +12,7 @@
     if (IsConnected)
     {
         <RadzenButton ButtonStyle="ButtonStyle.Primary" Click="@StartCandleMagic" Text="Start magic" />
+        <RadzenButton ButtonStyle="ButtonStyle.Primary" Click="@StopCandleMagic" Text="Stop magic" />
 
         <hr />
 
@@ -24,7 +25,6 @@
                 <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Low" Title="Low" />
                 <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Close" Title="Close" />
                 <RadzenDataGridColumn Width="100px" TItem="Candle" Property="From" Title="From" />
-                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="To" Title="To" />
                 <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Kill" Title="Kill" />
             </Columns>
         </RadzenDataGrid>
@@ -65,6 +65,11 @@
     private async Task StartCandleMagic()
     {
         await hubConnection.SendAsync("StartCandleMagic");
+    }
+
+    private async Task StopCandleMagic()
+    {
+        await hubConnection.SendAsync("StopCandleMagic");
     }
 
     public bool IsConnected =>
