--- a/TradeMaster6000/Client/Pages/Index.razor
+++ b/TradeMaster6000/Client/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
 @using Microsoft.AspNetCore.Authorization
-@attribute [Authorize]
+@*@attribute [Authorize]*@
 <h1>May the force be with you...</h1>
 
