--- a/TradeMaster6000/Client/Shared/MainLayout.razor
+++ b/TradeMaster6000/Client/Shared/MainLayout.razor
@@ -2,18 +2,26 @@
     <Title Value="MONEY MACHINE"></Title>
 
     <div class="page">
+
         <div class="sidebar">
             <NavMenu />
         </div>
 
         <div class="main">
             <div class="top-row px-4 auth">
+
                 <LoginDisplay />
             </div>
 
             <div class="content px-4">
                 @Body
             </div>
+
+            <div class="footer">
+                <StatusBar />
+            </div>
         </div>
+
+
 
     </div>
