--- a/TradeMaster6000/Client/Pages/ZoneService.razor
+++ b/TradeMaster6000/Client/Pages/ZoneService.razor
@@ -5,7 +5,7 @@
 @using TradeMaster6000.Shared
 @inject NavigationManager NavigationManager
 @implements IAsyncDisposable
-@attribute [Authorize]
+@*@attribute [Authorize]*@
 
 @{
 
