--- a/TradeMaster6000/Client/Shared/StatusBar.razor
+++ b/TradeMaster6000/Client/Shared/StatusBar.razor
@@ -78,11 +78,11 @@
     {
         if (!(bool)value)
         {
-            await Http.GetAsync("Status/StartFlushing");
+            //await Http.GetAsync("Status/StartFlushing");
         }
         else if ((bool)value)
         {
-            await Http.GetAsync("Status/StopFlushing");
+            //await Http.GetAsync("Status/StopFlushing");
         }
     }
 
@@ -90,7 +90,7 @@
     {
         if (!(bool)value)
         {
-            await Http.GetAsync("Status/StopCandles");
+            //await Http.GetAsync("Status/StopCandles");
         }
     }
 }
