--- a/TradeMaster6000/Client/Pages/Index.razor
+++ b/TradeMaster6000/Client/Pages/Index.razor
@@ -1,5 +1,61 @@
 ﻿@page "/"
 @using Microsoft.AspNetCore.Authorization
-@attribute [Authorize]
-<h1>May the force be with you...</h1>
+@*@attribute [Authorize]*@
+
+<br />
+
+<h3>“Lose yourself,</h3>
+<h3>Lose yourself in this love.</h3>
+<h3>When you lose yourself in this love,</h3>
+<h3>you will find everything.</h3>       
+   
+<br />
+
+<h3>Lose yourself,</h3>
+<h3>Lose yourself.</h3>
+<h3>Do not fear this loss,</h3>
+<h3>For you will rise from the earth</h3>
+<h3>and embrace the endless heavens.</h3>          
+        
+<br />  
+        
+<h3>Lose yourself,</h3>
+<h3>Lose yourself.</h3>
+<h3>Escape from this earthly form,</h3>
+<h3>For this body is a chain</h3>
+<h3>and you are its prisoner.</h3>
+<h3>Smash through the prison wall</h3>
+<h3>and walk outside with the kings and princes.</h3>          
+        
+<br />  
+        
+<h3>Lose yourself,</h3>
+<h3>Lose yourself at the foot of the glorious King. When you lose yourself</h3>
+<h3>before the King</h3>
+<h3>you will become the King.</h3>          
+        
+<br />   
+
+<h3>Lose yourself,</h3>
+<h3>Lose yourself.</h3>
+<h3>Escape from the black cloud</h3>
+<h3>that surrounds you.</h3>
+<h3>Then you will see your own light</h3>
+<h3>as radiant as the full moon.</h3>          
+        
+<br />
+
+<h3>Now enter that silence.</h3>
+<h3>This is the surest way</h3>
+<h3>to lose yourself. . . .</h3>          
+        
+<br /> 
+
+<h3>What is your life about, anyway?—</h3>
+<h3>Nothing but a struggle to be someone,</h3>
+<h3>Nothing but a running from your own silence.”</h3>          
+
+<br />   
+        
+
 
