--- a/TradeMaster6000/Client/wwwroot/css/app.css
+++ b/TradeMaster6000/Client/wwwroot/css/app.css
@@ -53,14 +53,40 @@ a, .btn-link {
     padding-top:10px;
 }
 
-.status-box {
-    padding: 20px;
-    float:left;
-}
-
 .footer {
-    height:100px;
+    height: 100px;
     position: fixed;
     bottom: 0;
-    width:100%;
+    width: 100%;
+    background-color: #230000;
+}
+
+.status-box {
+    padding: 20px;
+    float: left;
+    width:auto;
+}
+
+.status-box p {
+    display:inline;
+}
+
+.on {
+    display: inline;
+/*    text-align: center;*/
+/*    padding-top: 15px;
+    height: 50px;
+    width: 50px;*/
+    background-color: #19dd02;
+    color: #000000;
+}
+
+.off {
+    display: inline;
+/*    text-align: center;
+    padding-top: 15px;
+    height: 50px;
+    width: 50px;*/
+    background-color: red;
+    color: #000000;
 }
