--- a/TradeMaster6000/Client/Shared/MainLayout.razor
+++ b/TradeMaster6000/Client/Shared/MainLayout.razor
@@ -8,7 +8,7 @@
     </div>
 
     <div class="main">
-        <div class="top-row px-4 auth">
+        <div class="top-row px-4 auth" style="background-image: linear-gradient(to right, #000000 0%, #330000 70%); border:none;">
             <LoginDisplay />
         </div>
 
