--- a/TradeMaster6000/Client/Shared/StatusBar.razor
+++ b/TradeMaster6000/Client/Shared/StatusBar.razor
@@ -4,7 +4,7 @@
 
 <button class="@buttonclass" @onclick="ToggleFooter" >@buttontext</button>
 <div class="@csclass">
-    <div class="status-box">
+    <div class="status-box" style="float:right;">
         @{
             <p>Api</p>
             if (apiLoggedIn)
