--- a/TradeMaster6000/Client/Pages/CandleMagic.razor
+++ b/TradeMaster6000/Client/Pages/CandleMagic.razor
@@ -18,22 +18,23 @@
 
         <RadzenListBox AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
                        @bind-Value="tradingSymbol" Data=@instruments TextProperty="TradingSymbol"
-                       ValueProperty="TradingSymbol" Change=@((args) => GetCandles(args)) Style="height:200px" />
+                       ValueProperty="TradingSymbol" Change=@((args) => GetCandles(args)) Style="height:200px; color:#171717;" />
 
         <hr />
 
-        <RadzenDataGrid @ref="candlesGrid" AllowFiltering="true" AllowPaging="true" PageSize="10" AllowSorting="true"
-                        Data="@candles" TItem="Candle">
-            <Columns>
-                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Open" Title="Open" />
-                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="High" Title="High" />
-                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Low" Title="Low" />
-                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Close" Title="Close" />
-                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Timestamp" Title="Timestamp" />
-                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="TicksCount" Title="Ticks Count" />
-                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Kill" Title="Kill" />
-            </Columns>
-        </RadzenDataGrid>
+            <RadzenDataGrid @ref="candlesGrid" AllowFiltering="true" AllowPaging="true" PageSize="10" AllowSorting="true"
+                            Data="@candles" TItem="Candle">
+                <Columns>
+                    <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Open" Title="Open" />
+                    <RadzenDataGridColumn Width="100px" TItem="Candle" Property="High" Title="High" />
+                    <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Low" Title="Low" />
+                    <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Close" Title="Close" />
+                    <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Timestamp" Title="Timestamp" />
+                    <RadzenDataGridColumn Width="100px" TItem="Candle" Property="TicksCount" Title="Ticks Count" />
+                    <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Kill" Title="Kill" />
+                </Columns>
+            </RadzenDataGrid>
+
     }
     else
     {
