--- a/TradeMaster6000/Client/wwwroot/css/app.css
+++ b/TradeMaster6000/Client/wwwroot/css/app.css
@@ -2,11 +2,38 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background: #272727;
+}
+
+.main {
+    background: #272727;
 }
 
 a, .btn-link {
     color: #0366d6;
 }
+
+.login-container {
+
+}
+
+    .login-container a, .login-container button {
+        margin:10px;
+        background:none;
+        border:none;
+        outline:none;
+        padding:0px;
+        display:inline;
+        color: #d5d5d5;
+        font-weight: normal;
+    }
+
+        .login-container a:hover, .login-container button:hover {
+            color: #d5d5d5;
+            font-weight: bold;
+            text-decoration: none;
+        }
+
 
 .btn-primary {
     color: #fff;
@@ -16,6 +43,8 @@ a, .btn-link {
 
 .content {
     padding-top: 1.1rem;
+    background:#272727;
+    color:#ffffff;
 }
 
 .valid.modified:not([type=checkbox]) {
@@ -56,13 +85,12 @@ a, .btn-link {
 .footerbooter {
     height: auto;
     width: auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding:20px;
     position: fixed;
     bottom: 0;
     right: 0;
     left: 150px;
-    background-image: linear-gradient(to right, #230000 0%, #000000 70%);
+    background-image: linear-gradient(to right, #330000 0%, #000000 70%);
 }
 
 .dissapear {
@@ -81,9 +109,9 @@ a, .btn-link {
 
 .status-box {
     padding: 20px;
-    float: right;
+    float: left;
     width: auto;
-    height:60px;
+    height: 60px;
     background: #2e2e2e;
     color: #fff;
     margin-right: 10px;
