--- a/TradeMaster6000/Client/Pages/ZoneService.razor
+++ b/TradeMaster6000/Client/Pages/ZoneService.razor
@@ -25,6 +25,21 @@
                 <RadzenDataGridColumn Width="100px" TItem="Zone" Property="To" Title="To" />
             </Columns>
         </RadzenDataGrid>
+
+        <hr />
+
+        <RadzenDataGrid @ref="candlesGrid" AllowFiltering="true" AllowPaging="true" PageSize="10" AllowSorting="true"
+                        Data="@candles" TItem="Candle">
+            <Columns>
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Open" Title="Open" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="High" Title="High" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Low" Title="Low" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Close" Title="Close" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Timestamp" Title="Timestamp" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="TicksCount" Title="Ticks Count" />
+                <RadzenDataGridColumn Width="100px" TItem="Candle" Property="Kill" Title="Kill" />
+            </Columns>
+        </RadzenDataGrid>
     }
     else
     {
@@ -35,7 +50,9 @@
 @code {
     private HubConnection hubConnection;
     RadzenDataGrid<Zone> zonesGrid;
-    private IEnumerable<Zone> zones = new List<Zone>();
+    RadzenDataGrid<Candle> candlesGrid;
+    private List<Zone> zones = new List<Zone>();
+    private List<Candle> candles = new List<Candle>();
     protected override async Task OnInitializedAsync()
     {
         hubConnection = new HubConnectionBuilder()
@@ -49,14 +66,27 @@
             StateHasChanged();
         });
 
+        hubConnection.On<List<Candle>>("ReceiveZoneCandles", (list) =>
+        {
+            candles = list;
+            candles.Reverse();
+            StateHasChanged();
+        });
+
         await hubConnection.StartAsync();
 
         await GetZones();
+        await GetZoneCandles();
     }
 
     public async Task GetZones()
     {
         await hubConnection.SendAsync("GetZones");
+    }
+
+    public async Task GetZoneCandles()
+    {
+        await hubConnection.SendAsync("GetZoneCandles");
     }
 
     private async Task StartZoneService()
