--- a/TradeMaster6000/Client/Shared/MainLayout.razor.css
+++ b/TradeMaster6000/Client/Shared/MainLayout.razor.css
@@ -9,7 +9,7 @@
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, #000000 0%, #230000 70%);
+    background-image: linear-gradient(180deg, #00fff7 0%, #230000 70%);
 }
 
 .top-row {
